Updare Swagger
